/ ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.pdf’ / ‘Algebra/UGA Questions/sections/2019 Fall.md’

--- a/Algebra/UGA Questions/sections/2019 Fall.md
+++ b/Algebra/UGA Questions/sections/2019 Fall.md
@@ -87,10 +87,10 @@ How many subfields are there of $\QQ(\zeta_{20} )$?
 
 Let $\{e_1, \cdots, e_n \}$ be a basis of a real vector space $V$ and let
 $$
-\Lambda \definedas \theset{ \sum r_i e_i \mid ri \in \ZZ}
+\Lambda \definedas \theset{ \sum r_i e_i \mid r_i \in \ZZ}
 $$
 
-Let $\cdot$ be a non-degenerate ($v \cdot w = 0$ for all $w \in V \iff v = 0$) symmetric bilinear form on V such that the Gram matrix $M = (e_i \cdot e_j )$ has integer entries.
+Let $\cdot$ be a non-degenerate ($v \cdot w = 0$ for all $w \in V \iff v = 0$) symmetric bilinear form on $V$ such that the Gram matrix $M = (e_i \cdot e_j )$ has integer entries.
 
 Define the dual of $\Lambda$ to be
 
