/ ‘Algebra/UGA Questions/sections/2016 Fall.md’

--- a/Algebra/UGA Questions/sections/2016 Fall.md
+++ b/Algebra/UGA Questions/sections/2016 Fall.md
@@ -11,13 +11,25 @@ D_{2m} = \gens{\sigma, \tau \suchthat \sigma^m = 1 = \tau^2, \tau \sigma = \sigm
 .\end{align*}
 
 
-## 1
+## 2
+Let $A, B$ be two $n\times n$ matrices with the property that $AB = BA$.
+Suppose that $A$ and $B$ are diagonalizable.
+Prove that $A$ and $B$ are *simultaneously* diagonalizable.
 
 
-## 1
+## 3
+How many groups are there up to isomorphism of order $pq$ where $p<q$ are prime integers?
 
 
-## 1
+## 4
+
+Set $f(x) = x^3 - 5 \in \QQ[x]$.
+
+a. Find the splitting field $K$ of $f(x)$ over $\QQ$.
+
+b. Find the Galois group $G$ of $K$ over $\QQ$.
+
+c. Exhibit explicitly the correspondence between subgroups of $G$ and intermediate fields between $\QQ$ and $K$.
 
 
 ## 1
