--- a/Algebra/UGA Questions/sections/2016 Fall.md
+++ b/Algebra/UGA Questions/sections/2016 Fall.md
@@ -32,13 +32,26 @@ b. Find the Galois group $G$ of $K$ over $\QQ$.
 c. Exhibit explicitly the correspondence between subgroups of $G$ and intermediate fields between $\QQ$ and $K$.
 
 
-## 1
+## 5
+
+How many monic irreducible polynomials over $\FF_p$ of prime degree $\ell$ are there?
+Justify your answer.
 
 
-## 1
+## 6
+Let $R$ be a ring and $f: M\to N$ and $g: N\to M$ be $R\dash$module homomorphisms such that $g\circ f = \id_M$.
+Show that $N\cong \im f \oplus \ker g$.
 
 
-## 1
+
+
+## 7
+
+a. Define what it means for a group $G$ to be *solvable*.
+
+b. Show that every group $G$ of order 36 is solvable.
+
+  > Hint: you can use that $S_4$ is solvable.
 
 
 ## 1
