/ ‘Algebra/UGA Questions/sections/2015 Fall.md’

--- a/Algebra/UGA Questions/sections/2015 Fall.md
+++ b/Algebra/UGA Questions/sections/2015 Fall.md
@@ -13,10 +13,19 @@ Prove that this is an orbit under this action of length 1.
 Prove that $xP$ is an orbit of length 1 $\iff H$ is contained in $xPx\inv$.
 
 
-## 1
+## 3
+
+Let $R$ be a rng (a ring without 1) which contains an element $u$ such that for all $y\in R$, there exists an $x\in R$ such that $xu=y$.
+
+Prove that $R$ contains a maximal left ideal.
+
+> Hint: imitate the proof (using Zorn's lemma) in the case where $R$ does have a 1.
 
 
-## 1
+## 4
+
+Let $R$ be a PID and $(a_1) < (a_2) < \cdots$ be an ascending chain of ideals in $R$.
+Prove that for some $n$, we have $(a_j) = (a_n)$ for all $j\geq n$.
 
 
 ## 1
