/ ‘Algebra/UGA Questions/sections/2015 Fall.md’

--- a/Algebra/UGA Questions/sections/2015 Fall.md
+++ b/Algebra/UGA Questions/sections/2015 Fall.md
@@ -28,7 +28,15 @@ Let $R$ be a PID and $(a_1) < (a_2) < \cdots$ be an ascending chain of ideals in
 Prove that for some $n$, we have $(a_j) = (a_n)$ for all $j\geq n$.
 
 
-## 1
+## 5
+
+Let $u = \sqrt{2 + \sqrt{2}}$, $v = \sqrt{2 - \sqrt{2}}$, and $E = \QQ(u)$.
+
+a. Find (with justification) the minimal polynomial $f(x)$ of $u$ over $\QQ$.
+
+b. Show $v\in E$, and show that $E$ is a splitting field of $f(x)$ over $\QQ$.
+
+c. Determine the Galois group of $E$ over $\QQ$ and determine all of the intermediate fields $F$ such that $\QQ \subset F \subset E$.
 
 
 ## 1
