/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.md’ / ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -341,21 +341,23 @@ For some elements $\omega_i$ which exist by the primitive element theorem.
 
 ### a.
 
-Let $\vector v \in \Lambda$, so $\vector v = \sum r_i \vector e_i$ where $r_i \in \ZZ$.
+Let $\vector v \in \Lambda$, so $\vector v = \sum_{i=1}^n r_i \vector e_i$ where $r_i \in \ZZ$ for all $i$.
 
-Then if $\vector x = \sum s_i \vector e_i \in \Lambda$, we have
+Then if $\vector x = \sum_{j=1}^n s_j \vector e_j \in \Lambda$ is arbitrary, we have $s_j \in \ZZ$ for all $j$ and 
 \begin{align*}
-\vector v \cdot \vector x = \sum r_i s_i \in \ZZ
+\inner{\vector v}{\vector x} 
+&= \inner{\sum_{i=1}^n r_i \vector e_i}{\sum_{j=1}^n s_j \vector e_j } \\
+&= \sum_{i=1}^n \sum_{j=1}^n r_i s_j \inner{\vector e_i}{\vector e_j }  \in \ZZ
 \end{align*}
 
-since each term is just a product of integers, so $\vector v \in \Lambda\dual$ by definition.
+since this is a sum of products of integers (since $\inner{\vector e_i}{\vector e_j} \in \ZZ$ for each $i, j$ pair by assumption) so $\vector v \in \Lambda\dual$ by definition.
 
 ### b. 
 
 
 **$\det M \neq 0$**:
 
-Suppose $\det M = 0$. Then $\ker M \neq \vector 0$, so let $\vector v \in \ker M$ be given by $\vector v = [v_1, \cdots, v_n]$.
+Suppose $\det M = 0$. Then $\ker M \neq \vector 0$, so let $\vector v \in \ker M$ be given by $\vector v = \sum_{i=1}^n v_i \vector e_i$. 
 
 Note that 
 \begin{align*}
@@ -370,11 +372,10 @@ M\vector v = 0 &\implies
 \left[\begin{array}{c}
 v_1 \\ v_2 \\ \vdots
 \end{array}\right] = \vector 0 \\ \\
-&\implies \sum_j (\vector e_1 \cdot  \vector e_j) v_j = 0 \quad \forall j
+&\implies \sum_{j=1}^n v_j\inner{\vector e_k}{\vector e_j} = 0 \qtext{for each fixed} k
 .\end{align*}
 
-Let $\vector w = \sum v_i \vector e_i$. 
-Then $\vector e_k \cdot \vector w = \sum_j v_j \vector e_k \cdot \vector e_j = 0$ for every $k$, so $\vector w$ is orthogonal to every $\vector e_k$, and thus its span.
+We can now note that $\inner{\vector e_k}{\vector v} = \sum_{j=1}^n v_j \vector e_k \cdot \vector e_j = 0$ for every $k$, so $\vector w$ is orthogonal to every $\vector e_k$, and thus its span.
 
 But $\vector w$ is in the span of the $\vector e_i$ by definition, so 
 $$
