/ ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -375,7 +375,7 @@ v_1 \\ v_2 \\ \vdots
 &\implies \sum_{j=1}^n v_j\inner{\vector e_k}{\vector e_j} = 0 \qtext{for each fixed} k
 .\end{align*}
 
-We can now note that $\inner{\vector e_k}{\vector v} = \sum_{j=1}^n v_j \vector e_k \cdot \vector e_j = 0$ for every $k$, so $\vector w$ is orthogonal to every $\vector e_k$, and thus its span.
+We can now note that $\inner{\vector e_k}{\vector v} = \sum_{j=1}^n v_j \inner{\vector e_k}{\vector e_j} = 0$ for every $k$ by the above observation, so $\vector v$ is orthogonal to every $\vector e_k$, and thus $\vector v$ is orthogonal to $\spanof\theset{\vector e_1, \cdots, \vector e_n}$.
 
 But $\vector w$ is in the span of the $\vector e_i$ by definition, so 
 $$
