--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -377,9 +377,9 @@ v_1 \\ v_2 \\ \vdots
 
 We can now note that $\inner{\vector e_k}{\vector v} = \sum_{j=1}^n v_j \inner{\vector e_k}{\vector e_j} = 0$ for every $k$ by the above observation, so $\vector v$ is orthogonal to every $\vector e_k$, and thus $\vector v$ is orthogonal to $\spanof\theset{\vector e_1, \cdots, \vector e_n}$.
 
-But $\vector w$ is in the span of the $\vector e_i$ by definition, so 
+But $\vector v$ is in the span of the $\vector e_i$ by definition, so 
 $$
-\vector w \cdot \vector w = 0 \implies \vector w = 0 \implies\theset{\vector e_i} \text{ is linearly dependent}
+\inner{\vector v}{\vector v} = 0 \implies \vector v = 0 \implies\theset{\vector e_i} \text{ is linearly dependent}
 ,$$ 
 a contradiction.
 
