--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -375,13 +375,7 @@ v_1 \\ v_2 \\ \vdots
 &\implies \sum_{j=1}^n v_j\inner{\vector e_k}{\vector e_j} = 0 \qtext{for each fixed} k
 .\end{align*}
 
-We can now note that $\inner{\vector e_k}{\vector v} = \sum_{j=1}^n v_j \inner{\vector e_k}{\vector e_j} = 0$ for every $k$ by the above observation, so $\vector v$ is orthogonal to every $\vector e_k$, and thus $\vector v$ is orthogonal to $\spanof\theset{\vector e_1, \cdots, \vector e_n}$.
-
-But $\vector v$ is in the span of the $\vector e_i$ by definition, so 
-$$
-\inner{\vector v}{\vector v} = 0 \implies \vector v = 0 \implies\theset{\vector e_i} \text{ is linearly dependent}
-,$$ 
-a contradiction.
+We can now note that $\inner{\vector e_k}{\vector v} = \sum_{j=1}^n v_j \inner{\vector e_k}{\vector e_j} = 0$ for every $k$ by the above observation, which forces $\vector v = 0$ by non-degeneracy of $\inner{\wait}{\wait}$, a contradiction. 
 
 $\qed$
 
