/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -406,7 +406,7 @@ Since $M \in \GL(n, \ZZ)$, $M\inv, M^t, M^{-t} \in \GL(n, \ZZ)$ as well.
 
 \begin{align*}
 \vector v \in \Lambda\dual 
-&\implies \vector e_i \cdot \vector v = z_i \in \ZZ \quad \forall i \\
+&\implies \inner{\vector e_i}{\vector v} = z_i \in \ZZ \quad \forall i \\
 &\implies A^t \vector v = \vector z \in \ZZ^n \\
 &\implies \vector v = A^{-t} \vector z \definedas B\vector z \in \im B \\
 &\implies \spanof~\Lambda\dual \subseteq \im B
