/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -399,10 +399,10 @@ $\qed$
 
 Equivalently, the columns of $M^{-t}$ span $\Lambda\dual$.
 
-Let $B = M^{-t}$ and let $\vector b_i$ denote the columns of $B$, i.e. the span of $\im B$.
+Let $B = A^{-t}$ and let $\vector b_i$ denote the columns of $B$, so $\im B = \spanof{\theset{\vector b_i}}$.
 
 
-Since $M \in \GL(n, \ZZ)$, $M\inv, M^t, M^{-t} \in \GL(n, \ZZ)$ as well.
+Since $A \in \GL(n, \ZZ)$, $A\inv, A^t, A^{-t} \in \GL(n, \ZZ)$ as well.
 
 \begin{align*}
 \vector v \in \Lambda\dual 
