/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -395,9 +395,11 @@ since $A$ has full rank because the $\vector e_i$ are linearly independent.
 
 $\qed$
 
-**The rows of $M\inv$ span $\Lambda\dual$**:
+Let $A = [\vector e_1^t, \cdots, \vector e_n^t]$ be the matrix with $\vector e_i$ in the $i$th column.
 
-Equivalently, the columns of $M^{-t}$ span $\Lambda\dual$.
+**The rows of $A\inv$ span $\Lambda\dual$**:
+
+Equivalently, the columns of $A^{-t}$ span $\Lambda\dual$.
 
 Let $B = A^{-t}$ and let $\vector b_i$ denote the columns of $B$, so $\im B = \spanof{\theset{\vector b_i}}$.
 
