--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -409,7 +409,7 @@ Since $A \in \GL(n, \ZZ)$, $A\inv, A^t, A^{-t} \in \GL(n, \ZZ)$ as well.
 \begin{align*}
 \vector v \in \Lambda\dual 
 &\implies \inner{\vector e_i}{\vector v} = z_i \in \ZZ \quad \forall i \\
-&\implies A^t \vector v = \vector z \in \ZZ^n \\
+&\implies A^t \vector v = \vector z \definedas [z_1, \cdots, z_n] \in \ZZ^n \\
 &\implies \vector v = A^{-t} \vector z \definedas B\vector z \in \im B \\
 &\implies \spanof~\Lambda\dual \subseteq \im B
 ,\end{align*}
