/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -411,7 +411,8 @@ Since $A \in \GL(n, \ZZ)$, $A\inv, A^t, A^{-t} \in \GL(n, \ZZ)$ as well.
 &\implies \inner{\vector e_i}{\vector v} = z_i \in \ZZ \quad \forall i \\
 &\implies A^t \vector v = \vector z \definedas [z_1, \cdots, z_n] \in \ZZ^n \\
 &\implies \vector v = A^{-t} \vector z \definedas B\vector z \in \im B \\
-&\implies \spanof~\Lambda\dual \subseteq \im B
+&\implies \vector v \in \im B \\
+&\implies \Lambda\dual \subseteq \im B
 ,\end{align*}
 
 and
