/ ‘Algebra/UGA Questions/sections/2015 Fall.md’

--- a/Algebra/UGA Questions/sections/2015 Fall.md
+++ b/Algebra/UGA Questions/sections/2015 Fall.md
@@ -14,7 +14,6 @@ Prove that $xP$ is an orbit of length 1 $\iff H$ is contained in $xPx\inv$.
 
 
 ## 3
-
 Let $R$ be a rng (a ring without 1) which contains an element $u$ such that for all $y\in R$, there exists an $x\in R$ such that $xu=y$.
 
 Prove that $R$ contains a maximal left ideal.
@@ -23,13 +22,11 @@ Prove that $R$ contains a maximal left ideal.
 
 
 ## 4
-
 Let $R$ be a PID and $(a_1) < (a_2) < \cdots$ be an ascending chain of ideals in $R$.
 Prove that for some $n$, we have $(a_j) = (a_n)$ for all $j\geq n$.
 
 
 ## 5
-
 Let $u = \sqrt{2 + \sqrt{2}}$, $v = \sqrt{2 - \sqrt{2}}$, and $E = \QQ(u)$.
 
 a. Find (with justification) the minimal polynomial $f(x)$ of $u$ over $\QQ$.
@@ -39,13 +36,49 @@ b. Show $v\in E$, and show that $E$ is a splitting field of $f(x)$ over $\QQ$.
 c. Determine the Galois group of $E$ over $\QQ$ and determine all of the intermediate fields $F$ such that $\QQ \subset F \subset E$.
 
 
-## 1
+## 6
+
+a. Let $G$ be a finite group.
+  Show that there exists a field extension $K/F$ with $\gal(K/F) = G$.
+
+  > You may assume that for any natural number $n$ there is a field extension with Galois group $S_n$.
+
+b. Let $K$ be a Galois extension of $F$ with $\abs{\gal(K/F)} = 12$.
+  Prove that there exists an intermediate field $E$ of $K/F$ with $[E: F] = 3$.
+
+c. With $K/F$ as in (b), does an intermediate field $L$ necessarily exist satisfying $[L: F] = 2$?
+  Give a proof or counterexample.
 
 
-## 1
+## 7
+
+a. Show that two $3\times 3$ matrices over $\CC$ are similar $\iff$ their characteristic polynomials are equal and their minimal polynomials are equal.
+
+b. Does the conclusion in (a) hold for $4\times 4$ matrices?
+  Justify your answer with a proof or counterexample.
 
 
-## 1
 
+## 8
+Let $V$ be a vector space over a field $F$ and $V\dual$ its dual.
+A *symmetric bilinear form* $(\wait, \wait)$ on $V$ is a map $V\cross V\to F$ satisfying
+\begin{align*}
+(av_1 + b v_2, w) = a(v_1, w) + b(v_2, w) \qtext{and} (v_1, v_2) = (v_2, v_1)
+\end{align*}
+for all $a, b\in F$ and $v_1, v_2 \in V$.
+The form is *nondegenerate* if the only element $w\in V$ satisfying $(v, w) = 0$ for all $v\in V$ is $w=0$.
 
+Suppose $(\wait, \wait)$ is a nondegenerate symmetric bilinear form on $V$.
+If $W$ is a subspace of $V$, define
+\begin{align*}
+W\perp \definedas \theset{v\in V \suchthat (v, w) = 0 \text{ for all } w\in W}
+.\end{align*}
+
+a. Show that if $X, Y$ are subspaces of $V$ with $Y\subset X$, then $X\perp \subseteq Y\perp$.
+
+b. Define an injective linear map 
+  \begin{align*}
+  \psi: Y\perp/X\perp \injects (X/Y)\dual
+  \end{align*}
+  which is an isomorphism if $V$ is finite dimensional.
 
