+ ‘Algebra/UGA Questions/sections/2013 Fall.md’ + ‘Algebra/UGA Questions/sections/2013 Spring.md’ / ‘Algebra/UGA Questions/sections/2014 Fall.md’ + ‘Algebra/UGA Questions/sections/2014 Spring.md’ + ‘Algebra/UGA Questions/sections/2012 Fall.md’ + ‘Algebra/UGA Questions/sections/2012 Spring.md’

--- a/Algebra/UGA Questions/sections/2014 Fall.md
+++ b/Algebra/UGA Questions/sections/2014 Fall.md
@@ -37,14 +37,24 @@ b. If $k\in F[x]$ is nonzero and of degree strictly less than $g$, then $k[T]$ i
 
 
 ## 5
+Let $T$ be a $5\times 5$ complex matrix with characteristic polynomial $\chi(x) = (x-3)^5$ and minimal polynomial $m(x) = (x-3)^2$.
+Determine all possible Jordan forms of $T$.
 
 
 ## 6
+Let $G$ be a group and $H, K < G$ be subgroups of finite index.
+Show that
+\begin{align*}
+[G: H\intersect K] \leq [G: H] ~ [G:K]
+.\end{align*}
 
 
 ## 7
+Give a careful proof that $\CC[x, y]$ is not a PID.
 
 
 ## 8
-
+Let $R$ be a nonzero commutative ring without unit such that $R$ does not contain a proper maximal ideal.
+Prove that for all $x\in R$, the ideal $xR$ is proper.
+You may assume the axiom of choice.
 
