--- a/Algebra/UGA Questions/sections/2013 Fall.md
+++ b/Algebra/UGA Questions/sections/2013 Fall.md
@@ -1,12 +1,32 @@
 # Spring 2014
 
 ## 1
+Let $p, q$ be distinct primes.
+
+a. Let $\bar q \in \ZZ_p$ be the class of $q\mod p$ and let $k$ denote the order of $\bar q$ as an element of $\ZZ_p\units$.
+  Prove that no group of order $pq^k$ is simple.
+
+b. Let $G$ be a group of order $pq$, and prove that $G$ is not simple.
 
 
 ## 2
+Let $G$ be a group of order 30.
+
+a. Show that $G$ has a subgroup of order 15.
+
+b. Show that every group of order 15 is cyclic.
+
+c. Show that $G$ is isomorphic to some semidirect product $\ZZ_{15} \semidirect \ZZ_2$.
+
+d. Exhibit three nonisomorphic groups of order 30 and prove that they are not isomorphic.
+  You are not required to use your answer to (c).
 
 
 ## 3
+
+a. Define *prime ideal*, give an example of a nontrivial ideal in the ring $\ZZ$ that is not prime, and prove that it is not prime.
+
+b. Define *maximal ideal*, give an example of a nontrivial maximal ideal in $\ZZ$ and prove that it is maximal.
 
 
 ## 4
