/ ‘Algebra/UGA Questions/sections/2012 Fall.md’

--- a/Algebra/UGA Questions/sections/2012 Fall.md
+++ b/Algebra/UGA Questions/sections/2012 Fall.md
@@ -1,9 +1,23 @@
 # Spring 2014
 
 ## 1
+Let $G$ be a finite group and $X$ a set on which $G$ acts.
+
+a. Let $x\in X$ and $G_x \definedas \theset{g\in G \suchthat g\cdot x = x}$. 
+  Show that $G_x$ is a subgroup of $G$.
+
+b. Let $x\in X$ and $G\cdot x \definedas \theset{g\cdot x \suchthat g\in G}$.
+  Prove that there is a bijection between elements in $G\cdot x$ and the left cosets of $G_x$ in $G$.
 
 
 ## 2
+Let $G$ be a group of order 30.
+
+a. Show that $G$ contains normal subgroups of orders 3, 5, and 15.
+
+b. Give all possible presentations and relations for $G$.
+
+c. Determine how many groups of order 30 there are up to isomorphism.
 
 
 ## 3
