/ ‘Algebra/UGA Questions/sections/2012 Fall.md’

--- a/Algebra/UGA Questions/sections/2012 Fall.md
+++ b/Algebra/UGA Questions/sections/2012 Fall.md
@@ -50,6 +50,8 @@ Call a proper submodule $M' \subsetneq M$ *intersection-decomposable* if it can 
 Prove that for every Noetherian module $M$, any proper submodule $N\subsetneq M$ can be written as a finite intersection $N = N_1 \intersect \cdots \intersect N_k$ of intersection-indecomposable modules.
 
 ## 7
+Let $k$ be a field of characteristic zero and $A, B \in M_n(k)$ be two square $n\times n$ matrices over $k$ such that $AB - BA = A$.
+Prove that $\det A = 0$.
 
 
 ## 8
