/ ‘Algebra/UGA Questions/sections/2012 Fall.md’

--- a/Algebra/UGA Questions/sections/2012 Fall.md
+++ b/Algebra/UGA Questions/sections/2012 Fall.md
@@ -53,7 +53,10 @@ Prove that for every Noetherian module $M$, any proper submodule $N\subsetneq M$
 Let $k$ be a field of characteristic zero and $A, B \in M_n(k)$ be two square $n\times n$ matrices over $k$ such that $AB - BA = A$.
 Prove that $\det A = 0$.
 
+Moreover, when the characteristic of $k$ is 2, find a counterexample to this statement.
+
 
 ## 8
+Prove that any nondegenerate matrix $X\in M_n(\RR)$ can be written as $X = UT$ where $U$ is orthogonal and $T$ is upper triangular.
 
 
