/ ‘Algebra/UGA Questions/sections/2011 Spring.md’

--- a/Algebra/UGA Questions/sections/2014 Fall.md
+++ b/Algebra/UGA Questions/sections/2014 Fall.md
@@ -21,7 +21,7 @@ Consider the polynomial $f(x) = x^4 - 7 \in \QQ[x]$ and let $E/\QQ$ be the split
 
 a. What is the structure of the Galois group of $E/\QQ$?
 
-b. Give an explicit description of all of the intermediate subfields $\QQ \subset K \subset E$ in the form $K = \QQ(\alpha), \QQ(\alpha, \beta), \cdotrs$ where $\alpha, \beta$, etc are complex numbers.
+b. Give an explicit description of all of the intermediate subfields $\QQ \subset K \subset E$ in the form $K = \QQ(\alpha), \QQ(\alpha, \beta), \cdots$ where $\alpha, \beta$, etc are complex numbers.
   Describe the corresponding subgroups of the Galois group.
 
 
