/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/0_Problem_Sessions.md’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -61,7 +61,7 @@ So for every $g\in G$, we have $g = g_j$ for some $j$, and thus $g = g_j \in Z(g
 Then $G\subseteq Z(G)$ and $G$ is abelian.
 
 
-## 2 \label{problem:session_1_3.2}
+## 2 \label{problem:session_1_3_2_soln}
 
 > $pqr$ Theorem.
 
