/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -82,13 +82,12 @@ Toward a contradiction, if $n_5\neq 1$ and $n_7 \neq 1$, then $Q, R$ contribute
 
 ### b
 
-> If $H, K \leq G$ and $H\normal G$ then $HK \leq G$ is a subgroup.
-> Proof: Check closure under products, needs normality.
+> - **Theorem**: If $H, K \leq G$ and $H\normal G$ then $HK$ is a subgroup.
 > 
-> **Theorem**: For a positive integer $n$, all groups of order $n$ are cyclic $\iff n$ is
+> - **Theorem**: For a positive integer $n$, all groups of order $n$ are cyclic $\iff n$ is
 squarefree and, for each pair of distinct primes $p$ and $q$ dividing $n$, $q - 1 \neq 0 \mod p$.
 >
-> Theorem: If $G = A_1 A_2 \cdots A_n = \prod A_k$ and $A_i \intersect \prod_{k\neq i}A_i = \theset{e}$ for all $i$, then $A \cong A_1 \cross \cdots \cross A_n$.
+> - **Theorem:** If $G = A_1 A_2 \cdots A_n = \prod A_k$ and $A_i \intersect \prod_{k\neq i}A_i = \theset{e}$ for all $i$, then $A \cong A_1 \cross \cdots \cross A_n$.
 
 Either $Q$ or $R$ is normal, so $QR \leq G$ is a subgroup of order $\abs{Q} \cdot \abs{R} = 5\cdot 7 = 35$.
 
