/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -87,7 +87,11 @@ Toward a contradiction, if $n_5\neq 1$ and $n_7 \neq 1$, then $Q, R$ contribute
 > - **Theorem**: For a positive integer $n$, all groups of order $n$ are cyclic $\iff n$ is
 squarefree and, for each pair of distinct primes $p$ and $q$ dividing $n$, $q - 1 \neq 0 \mod p$.
 >
-> - **Theorem:** If $G = A_1 A_2 \cdots A_n = \prod A_k$ and $A_i \intersect \prod_{k\neq i}A_i = \theset{e}$ for all $i$, then $A \cong A_1 \cross \cdots \cross A_n$.
+> - **Theorem:** 
+\begin{align*}
+A_i\normal G, \quad G = A_1 \cdots A_k,\quad A_k \intersect \prod_{i\neq k} A_i = \emptyset \implies G = \prod A_i
+.\end{align*}
+> If $G = A_1 A_2 \cdots A_n = \prod A_k$ and $A_i \intersect \prod_{k\neq i}A_i = \theset{e}$ for all $i$, then $A \cong A_1 \cross \cdots \cross A_n$.
 
 Either $Q$ or $R$ is normal, so $QR \leq G$ is a subgroup of order $\abs{Q} \cdot \abs{R} = 5\cdot 7 = 35$.
 
