--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -69,7 +69,13 @@ Then $G\subseteq Z(G)$ and $G$ is abelian.
 
 > Recall $n_p \divides m$ and $n_p \cong 1 \mod p$.
 
-An easy check:
+We have 
+
+- $n_3 \divides 5\cdot 7, n_3 \cong 1 \mod 3 \implies n_3 \in \theset{1, 5, 7, 35}$
+- $n_5 \divides 3\cdot 7, n_5 \cong 1 \mod 5 \implies n_5 \in \theset{1, 3, 7, 21}$
+- $n_7 \divides 3\cdot 5, n_7 \cong 1 \mod 7 \implies n_7 \in \theset{1, 3, 5, 15}$
+
+Thus
 \begin{align*}
 n_3 \in \theset{1, 7} \quad n_5 \in \theset{1, 21} \quad n_7 \in \theset{1, 15}
 .\end{align*}
@@ -91,7 +97,6 @@ squarefree and, for each pair of distinct primes $p$ and $q$ dividing $n$, $q - 
 \begin{align*}
 A_i\normal G, \quad G = A_1 \cdots A_k,\quad A_k \intersect \prod_{i\neq k} A_i = \emptyset \implies G = \prod A_i
 .\end{align*}
-> If $G = A_1 A_2 \cdots A_n = \prod A_k$ and $A_i \intersect \prod_{k\neq i}A_i = \theset{e}$ for all $i$, then $A \cong A_1 \cross \cdots \cross A_n$.
 
 Either $Q$ or $R$ is normal, so $QR \leq G$ is a subgroup of order $\abs{Q} \cdot \abs{R} = 5\cdot 7 = 35$.
 
