--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -71,9 +71,9 @@ Then $G\subseteq Z(G)$ and $G$ is abelian.
 
 We have 
 
-- $n_3 \divides 5\cdot 7, n_3 \cong 1 \mod 3 \implies n_3 \in \theset{1, 5, 7, 35}$
-- $n_5 \divides 3\cdot 7, n_5 \cong 1 \mod 5 \implies n_5 \in \theset{1, 3, 7, 21}$
-- $n_7 \divides 3\cdot 5, n_7 \cong 1 \mod 7 \implies n_7 \in \theset{1, 3, 5, 15}$
+- $n_3 \divides 5\cdot 7, \quad n_3 \cong 1 \mod 3 \implies n_3 \in \theset{1, 5, 7, 35} \setminus \theset{5, 35}$
+- $n_5 \divides 3\cdot 7, \quad n_5 \cong 1 \mod 5 \implies n_5 \in \theset{1, 3, 7, 21}\setminus \theset{3, 7}$
+- $n_7 \divides 3\cdot 5, \quad n_7 \cong 1 \mod 7 \implies n_7 \in \theset{1, 3, 5, 15}\setminus\theset{3, 5}$
 
 Thus
 \begin{align*}
