--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -80,9 +80,9 @@ Thus
 n_3 \in \theset{1, 7} \quad n_5 \in \theset{1, 21} \quad n_7 \in \theset{1, 15}
 .\end{align*}
 
-Toward a contradiction, if $n_5\neq 1$ and $n_7 \neq 1$, then $Q, R$ contribute
+Toward a contradiction, if $n_5\neq 1$ and $n_7 \neq 1$, then 
 \begin{align*}
-(5-1)n_5 + (7-1)n_7 + 1 
+\abs{\syl(5) \union \syl(7)} (5-1)n_5 + (7-1)n_7 + 1 
 &= 4(21) + 6(15) > 105 \text{ elements}
 .\end{align*}
 
