--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -84,11 +84,15 @@ Toward a contradiction, if $n_5\neq 1$ and $n_7 \neq 1$, then
 \begin{align*}
 \abs{\syl(5) \union \syl(7)} = (5-1)n_5 + (7-1)n_7 + 1 
 &= 4(21) + 6(15) = 174 > 105 \text{ elements}
-.\end{align*}
+\end{align*}
+using the fact that 
 
 ### b
 
-> - **Theorem**: If $H, K \leq G$ and $H\normal G$ then $HK$ is a subgroup.
+> - **Theorem**: If $H, K \leq G$ and any of the following conditions hold, $HK$ is a subgroup:
+>   - $H\normal G$ (wlog)
+>   - $[H, K] = 1$
+>   - 
 > 
 > - **Theorem**: For a positive integer $n$, all groups of order $n$ are cyclic $\iff n$ is
 squarefree and, for each pair of distinct primes $p$ and $q$ dividing $n$, $q - 1 \neq 0 \mod p$.
