/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -67,7 +67,7 @@ Then $G\subseteq Z(G)$ and $G$ is abelian.
 
 ### a
 
-> Recall $n_p \divides m$ and $n_p \cong 1 \mod p$.
+> Sylow 3: $\abs{G} = p^n m$ implies $n_p \divides m$ and $n_p \cong 1 \mod p$.
 
 We have 
 
@@ -92,7 +92,7 @@ using the fact that
 > - **Theorem**: If $H, K \leq G$ and any of the following conditions hold, $HK$ is a subgroup:
 >   - $H\normal G$ (wlog)
 >   - $[H, K] = 1$
->   - 
+>   - $H \leq N_G(K)$ 
 > 
 > - **Theorem**: For a positive integer $n$, all groups of order $n$ are cyclic $\iff n$ is
 squarefree and, for each pair of distinct primes $p$ and $q$ dividing $n$, $q - 1 \neq 0 \mod p$.
