/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -63,12 +63,25 @@ Then $G\subseteq Z(G)$ and $G$ is abelian.
 
 ## 2 \label{problem:session_1_3_2_soln}
 
-> $pqr$ Theorem.
+Relevant Ideas:
+
+- The $pqr$ theorem.
+- Sylow 3: $\abs{G} = p^n m$ implies $n_p \divides m$ and $n_p \cong 1 \mod p$.
+- **Theorem**: If $H, K \leq G$ and any of the following conditions hold, $HK$ is a subgroup:
+  - $H\normal G$ (wlog)
+  - $[H, K] = 1$
+  - $H \leq N_G(K)$ 
+
+- **Theorem**: For a positive integer $n$, all groups of order $n$ are cyclic $\iff n$ is
+squarefree and, for each pair of distinct primes $p$ and $q$ dividing $n$, $q - 1 \neq 0 \mod p$.
+
+- **Theorem:** 
+\begin{align*}
+A_i\normal G, \quad G = A_1 \cdots A_k,\quad A_k \intersect \prod_{i\neq k} A_i = \emptyset \implies G = \prod A_i
+.\end{align*}
+
 
 ### a
-
-> Sylow 3: $\abs{G} = p^n m$ implies $n_p \divides m$ and $n_p \cong 1 \mod p$.
-
 We have 
 
 - $n_3 \divides 5\cdot 7, \quad n_3 \cong 1 \mod 3 \implies n_3 \in \theset{1, 5, 7, 35} \setminus \theset{5, 35}$
@@ -85,26 +98,14 @@ Toward a contradiction, if $n_5\neq 1$ and $n_7 \neq 1$, then
 \abs{\syl(5) \union \syl(7)} = (5-1)n_5 + (7-1)n_7 + 1 
 &= 4(21) + 6(15) = 174 > 105 \text{ elements}
 \end{align*}
-using the fact that 
+using the fact that Sylow $p\dash$subgroups for distinct primes $p$ intersect trivially (?).
 
 ### b
 
-> - **Theorem**: If $H, K \leq G$ and any of the following conditions hold, $HK$ is a subgroup:
->   - $H\normal G$ (wlog)
->   - $[H, K] = 1$
->   - $H \leq N_G(K)$ 
-> 
-> - **Theorem**: For a positive integer $n$, all groups of order $n$ are cyclic $\iff n$ is
-squarefree and, for each pair of distinct primes $p$ and $q$ dividing $n$, $q - 1 \neq 0 \mod p$.
->
-> - **Theorem:** 
-\begin{align*}
-A_i\normal G, \quad G = A_1 \cdots A_k,\quad A_k \intersect \prod_{i\neq k} A_i = \emptyset \implies G = \prod A_i
-.\end{align*}
+By (a), either $Q$ or $R$ is normal.
+Thus $QR \leq G$ is a subgroup, and it has order $\abs{Q} \cdot \abs{R} = 5\cdot 7 = 35$.
 
-Either $Q$ or $R$ is normal, so $QR \leq G$ is a subgroup of order $\abs{Q} \cdot \abs{R} = 5\cdot 7 = 35$.
-
-By the theorem, since $5 \notdivides 7-1$, $QR$ is cyclic.
+By the $pqr$ theorem, since $5 \notdivides 7-1$, $QR$ is cyclic.
 
 ### c
 
