/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -100,21 +100,26 @@ Toward a contradiction, if $n_5\neq 1$ and $n_7 \neq 1$, then
 \end{align*}
 using the fact that Sylow $p\dash$subgroups for distinct primes $p$ intersect trivially (?).
 
-### b
+### b (Todo)
 
 By (a), either $Q$ or $R$ is normal.
 Thus $QR \leq G$ is a subgroup, and it has order $\abs{Q} \cdot \abs{R} = 5\cdot 7 = 35$.
 
-By the $pqr$ theorem, since $5 \notdivides 7-1$, $QR$ is cyclic.
+By the $pqr$ theorem, since $5$ does not divide $7-1=6$, $QR$ is cyclic.
 
 ### c
+We want to show $Q, R\normal G$, so we proceed by showing $\not\qty{n_5 = 21 \text{ or } n_7 = 15}$, which is equivalent to $n_5 = 1 \text {and} n_7 = 1$ by the previous restrictions.
 
-In $QR$, there are 
+Counting elements:
 
-- $35 - 5 + 1$ elements of order *not* equal to 5,
-- $5 - 7 + 1$ elements of order *not* equal to 7.
+- Elements in $QR$ of order **not** equal to 5: $\abs{QR - Q\theset{\id} + \theset{\id}} = 35 - 5 + 1 = 31$
+- Elements in $QR$ of order **not** equal to 7: $\abs{QR - \theset{\id}R + \theset{\id}} = 35 - 7 + 1 = 29$
 
-Since $QR \leq G$, there are *at least* this many such elements in $G$.
+Since $QR \leq G$, we have
+
+- Elements in $G$ of order **not** equal to 5 $\geq 31$.
+- Elements in $G$ of order **not** equal to 7 $\geq 29$.
+
 
 Suppose $n_5 = 21$ or $n_7 = 15$.
 
