/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -110,7 +110,11 @@ By the $pqr$ theorem, since $5$ does not divide $7-1=6$, $QR$ is cyclic.
 ### c
 We want to show $Q, R\normal G$, so we proceed by showing $\not\qty{n_5 = 21 \text{ or } n_7 = 15}$, which is equivalent to $n_5 = 1 \text {and} n_7 = 1$ by the previous restrictions.
 
-Counting elements:
+Note that we can write
+\begin{align*}
+G = \theset{\text{elements of order } n} \disjoint \theset{\text{elements of order not } n}
+.\end{align*}
+for any $n$, so we count for $n=5, 7$:
 
 - Elements in $QR$ of order **not** equal to 5: $\abs{QR - Q\theset{\id} + \theset{\id}} = 35 - 5 + 1 = 31$
 - Elements in $QR$ of order **not** equal to 7: $\abs{QR - \theset{\id}R + \theset{\id}} = 35 - 7 + 1 = 29$
@@ -120,14 +124,21 @@ Since $QR \leq G$, we have
 - Elements in $G$ of order **not** equal to 5 $\geq 31$.
 - Elements in $G$ of order **not** equal to 7 $\geq 29$.
 
+Now both cases lead to contradictions:
 
-Suppose $n_5 = 21$ or $n_7 = 15$.
+- $n_5 = 21$:
+\begin{align*}
+\abs{G}  &= \abs{\theset{\text{elements of order } 5} \disjoint \theset{\text{elements of order not } 5}} \\
+&\geq n_5(5-1) + 31 = 21(4) + 31 = 115 > 105 = \abs{G}
+.\end{align*}
 
-- Combining elements of order 5 with elements *not* of order 5 yields at least 31 elements of order *not* 5 with $n_5(5-1) = 21(4) = 84$ elements of order 5, this contributes $31 + 84 > 105$ elements -- contradiction.
+- $n_7 = 15$:
+\begin{align*}
+\abs{G}  &= \abs{\theset{\text{elements of order } 7} \disjoint \theset{\text{elements of order not } 7}} \\
+&\geq n_7(7-1) + 29 = 15(6) + 29 = 119 > 105 = \abs{G}
+.\end{align*}
 
-- Similarly, there are at least $29$ elements of order *not* 7, plus $n_7(7-1) = 15(6) = 90$ elements of order 7, yielding $29 + 90 > 105$ elements.
 
-So both $n_5=1, n_7 = 1$.
 
 ### d
 If $P$ is normal, then $G=PQR$ with all intersections of the form $AB\intersect C = \theset{e}$, and since $P,Q,R$ are all normal we have $G \cong P\times Q \times R \cong \ZZ_3 \times \ZZ_5 \times \ZZ_7 \cong \ZZ_{105}$ by characterization of direct products and the Chinese Remainder theorem (which is cyclic).
