/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ + ‘Algebra/UGA Solutions/sections/.temp.pandoc-include’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -80,6 +80,9 @@ squarefree and, for each pair of distinct primes $p$ and $q$ dividing $n$, $q - 
 A_i\normal G, \quad G = A_1 \cdots A_k,\quad A_k \intersect \prod_{i\neq k} A_i = \emptyset \implies G = \prod A_i
 .\end{align*}
 
+- The intersection of subgroups is a again a subgroup.
+- Any subgroups of coprime order intersect trivially?
+
 
 ### a
 We have 
@@ -138,9 +141,14 @@ Now both cases lead to contradictions:
 &\geq n_7(7-1) + 29 = 15(6) + 29 = 119 > 105 = \abs{G}
 .\end{align*}
 
-
-
 ### d
+
+Suppose $P$ is normal and recall $\abs{P} = 3, \abs{Q} = 5, \abs{R} = 7$.
+
+- $P\intersect QR = \theset{e}$ since $(3, 35) = 1$ 
+- $R\intersect PQ = \theset{e}$ since $(5, 21) = 1$ 
+- $Q\intersect RP = \theset{e}$ since $(7, 15) = 1$ 
+
 If $P$ is normal, then $G=PQR$ with all intersections of the form $AB\intersect C = \theset{e}$, and since $P,Q,R$ are all normal we have $G \cong P\times Q \times R \cong \ZZ_3 \times \ZZ_5 \times \ZZ_7 \cong \ZZ_{105}$ by characterization of direct products and the Chinese Remainder theorem (which is cyclic).
 
 
