/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -149,7 +149,13 @@ Suppose $P$ is normal and recall $\abs{P} = 3, \abs{Q} = 5, \abs{R} = 7$.
 - $R\intersect PQ = \theset{e}$ since $(5, 21) = 1$ 
 - $Q\intersect RP = \theset{e}$ since $(7, 15) = 1$ 
 
-If $P$ is normal, then $G=PQR$ with all intersections of the form $AB\intersect C = \theset{e}$, and since $P,Q,R$ are all normal we have $G \cong P\times Q \times R \cong \ZZ_3 \times \ZZ_5 \times \ZZ_7 \cong \ZZ_{105}$ by characterization of direct products and the Chinese Remainder theorem (which is cyclic).
+We also have $PQR = G$ since $\abs{PQR} = \abs{G}$ (???).
+
+We thus have an internal direct product 
+\begin{align*}
+G \cong P\cross Q \cross R \cong \ZZ_3 \cross \ZZ_5 \cross \ZZ_7 \cong \ZZ_{105}
+.\end{align*}
+by the Chinese Remainder Theorem, which is cyclic.
 
 
 ## 3
