/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/0_Problem_Sessions.md’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’ / ‘Algebra/UGA Solutions/sections/2019 Fall.md’

--- a/Algebra/UGA Solutions/sections/2019 Fall.md
+++ b/Algebra/UGA Solutions/sections/2019 Fall.md
@@ -111,7 +111,7 @@ Thus $QR \leq G$ is a subgroup, and it has order $\abs{Q} \cdot \abs{R} = 5\cdot
 By the $pqr$ theorem, since $5$ does not divide $7-1=6$, $QR$ is cyclic.
 
 ### c
-We want to show $Q, R\normal G$, so we proceed by showing $\not\qty{n_5 = 21 \text{ or } n_7 = 15}$, which is equivalent to $n_5 = 1 \text {and} n_7 = 1$ by the previous restrictions.
+We want to show $Q, R\normal G$, so we proceed by showing $\textbf{not }\qty{n_5 = 21 \text{ or } n_7 = 15}$, which is equivalent to $\qty{n_5 = 1 \text{ and } n_7 = 1}$ by the previous restrictions.
 
 Note that we can write
 \begin{align*}
