/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -28,6 +28,11 @@ G = MP
 
 ## 2 \label{problem:session_1_6_2_soln}
 
+Concepts used:
+
+- Orbit: $G\cdot x \definedas \theset{g\cdot x \suchthat g\in G} \subseteq X$
+- Stabilizer: $G_x \definedas \theset{g\in G\suchthat g\cdot x = x} \leq G$
+
 ### a
 
 > - $G_a = \mathrm{Stab}_G(a) = \theset{g\in G \suchthat g\actson a = a}$
@@ -40,11 +45,11 @@ Then $a = h\actson b$ for some $h\in G$.
 Then
 \begin{align*}
 g\in G_a 
-\iff g\actson a &= a \\
-\iff g \actson (h\actson b) &= h\actson b \\
-\iff gh \actson b &= h\actson b \\
-\iff h\inv gh \actson b &= b \\
-\iff h\inv g h &\in G_b
+&\iff g\actson a &= a \\
+&\iff g \actson (h\actson b) &= h\actson b \\
+&\iff gh \actson b &= h\actson b \\
+&\iff h\inv gh \actson b &= b \\
+&\iff h\inv g h &\in G_b
 ,\end{align*}
 
 so $g\in G_a \iff hgh\inv \in G_b$ and so the stabilizers of any two elements in the same orbit are conjugate.
