/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -35,12 +35,19 @@ Concepts used:
 
 ### a
 
-> - $G_a = \mathrm{Stab}_G(a) = \theset{g\in G \suchthat g\actson a = a}$
-> - $G_b = \mathrm{Stab}_G(b) = \theset{g\in G \suchthat g\actson b = b}$
-> - $G\cdot x = \mathcal O_x = \theset{g\actson x \suchthat g\in G}$
+- Fix $x$ and let $y\in G_x$ be another element in the orbit of $x$.
+- Then there exists a $g\in G$ such that $g\cdot x = y$, so $x = g\inv \cdot y$
+- Then
+\begin{align*}
+h \in G\cdot x 
+&\iff h\cdot x = x \\
+&\iff h\cdot (g\inv \cdot y) = g\inv \cdot y \\
+&\iff (g h g\inv) \cdot y = y \\
+&\iff ghg\inv \in G_y \\
+&\iff h\in g\inv G_y g
+,\end{align*}
 
-Suppose $a,b \in X$ where $a \in G\cdot b$, so they belong to the same orbit.
-Then $a = h\actson b$ for some $h\in G$.
+so every $h\in G\cdot x$ is conjugate to some element in $G_y$.
 
 Then
 \begin{align*}
