/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -32,6 +32,7 @@ Concepts used:
 
 - Orbit: $G\cdot x \definedas \theset{g\cdot x \suchthat g\in G} \subseteq X$
 - Stabilizer: $G_x \definedas \theset{g\in G\suchthat g\cdot x = x} \leq G$
+- $abc\in H \iff b\in a\inv H c\inv$
 
 ### a
 
@@ -48,18 +49,6 @@ h \in G\cdot x
 ,\end{align*}
 
 so every $h\in G\cdot x$ is conjugate to some element in $G_y$.
-
-Then
-\begin{align*}
-g\in G_a 
-&\iff g\actson a &= a \\
-&\iff g \actson (h\actson b) &= h\actson b \\
-&\iff gh \actson b &= h\actson b \\
-&\iff h\inv gh \actson b &= b \\
-&\iff h\inv g h &\in G_b
-,\end{align*}
-
-so $g\in G_a \iff hgh\inv \in G_b$ and so the stabilizers of any two elements in the same orbit are conjugate.
 
 ### b
 
