/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -41,10 +41,10 @@ Concepts used:
 - Then
 \begin{align*}
 h \in G\cdot x 
-&\iff h\cdot x = x \\
-&\iff h\cdot (g\inv \cdot y) = g\inv \cdot y \\
+&\iff h\cdot x = x \qtext{by being in the stabilizer} \\
+&\iff h\cdot (g\inv \cdot y) = g\inv \cdot y \qtext{using that $x, y$ are in the same orbit} \\
 &\iff (g h g\inv) \cdot y = y \\
-&\iff ghg\inv \in G_y \\
+&\iff ghg\inv \in G_y \qtext{by the defn of the stabilizer}\\
 &\iff h\in g\inv G_y g
 ,\end{align*}
 
@@ -56,7 +56,7 @@ Suppose $\abs{H} = n$ and thus $\abs{G} = nm$ for some $m = [G: H] \geq 2$ by La
 
 Let $G$ act on its subgroups by conjugation, 
 
-- The orbit $G\cdot H$ is the set of all conjugate subgroups, and
+- The orbit $G\cdot H$ is the set of all subgroups conjugate to $H$, and
 
 - The stabilizer of $H$ is $G_H = N_G(H)$.
 
@@ -65,7 +65,7 @@ By orbit-stabilizer,
 G\cdot H = [G: G_H] = [G: N_G(H)]
 .\end{align*}
 
-Let $\abs H = n$, and note that all conjugate subgroups have the same order.
+Since $\abs H = n$, and all of its conjugate also have order $n$.
 
 Then
 \begin{align*}
