/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -66,6 +66,15 @@ G\cdot H = [G: G_H] = [G: N_G(H)]
 .\end{align*}
 
 Since $\abs H = n$, and all of its conjugate also have order $n$.
+Using the fact that 
+\begin{align*}
+H\leq N_G(H) \implies \abs{H} \leq \abs{N_G(H)} \implies {1\over \abs{N_G(H)}} \leq {1\over \abs{H}}
+,\end{align*}
+
+we can estimate
+\begin{align*}
+\abs{\union_{g\in G}gHg\inv} < (\text{Number of Conjugates of } H) \cdot (\text{Size of each conjugate}) \qtext{an overcount, because they may intersect nontrivially}
+.\end{align*}
 
 Then
 \begin{align*}
