/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -71,9 +71,13 @@ Using the fact that
 H\leq N_G(H) \implies \abs{H} \leq \abs{N_G(H)} \implies {1\over \abs{N_G(H)}} \leq {1\over \abs{H}}
 ,\end{align*}
 
-we can estimate
+we can bound strictly bound the size by ignoring the fact that the conjugates may intersect, and also overcounting their intersections at the identity:
 \begin{align*}
-\abs{\union_{g\in G}gHg\inv} < (\text{Number of Conjugates of } H) \cdot (\text{Size of each conjugate}) \qtext{an overcount, because they may intersect nontrivially}
+\abs{\union_{g\in G}gHg\inv} 
+&< (\text{Number of Conjugates of } H) \cdot (\text{Size of each conjugate}) \\ 
+&\qquad \qquad\textit{strictly overcounts since they intersect in at least the identity} \\
+& = [G: N_G(H)] \abs{H} \\
+&= {\abs{G} \over \abs{N_G(H)}} \abs{H} \qtext{since the groups are finite}
 .\end{align*}
 
 Then
