/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2018 Fall.md’

--- a/Algebra/UGA Solutions/sections/2018 Fall.md
+++ b/Algebra/UGA Solutions/sections/2018 Fall.md
@@ -32,6 +32,7 @@ Concepts used:
 
 - Orbit: $G\cdot x \definedas \theset{g\cdot x \suchthat g\in G} \subseteq X$
 - Stabilizer: $G_x \definedas \theset{g\in G\suchthat g\cdot x = x} \leq G$
+- Orbit-Stabilizer: $G\cdot x \simeq G/G_x$.
 - $abc\in H \iff b\in a\inv H c\inv$
 
 ### a
@@ -52,8 +53,6 @@ so every $h\in G\cdot x$ is conjugate to some element in $G_y$.
 
 ### b
 
-Suppose $\abs{H} = n$ and thus $\abs{G} = nm$ for some $m = [G: H] \geq 2$ by Lagrange since $H$ is proper.
-
 Let $G$ act on its subgroups by conjugation, 
 
 - The orbit $G\cdot H$ is the set of all subgroups conjugate to $H$, and
@@ -71,39 +70,16 @@ Using the fact that
 H\leq N_G(H) \implies \abs{H} \leq \abs{N_G(H)} \implies {1\over \abs{N_G(H)}} \leq {1\over \abs{H}}
 ,\end{align*}
 
-we can bound strictly bound the size by ignoring the fact that the conjugates may intersect, and also overcounting their intersections at the identity:
+we can *strictly* bound the size of the union of conjugates by ignoring the fact that they may intersect, and also overcounting their intersections at the identity:
 \begin{align*}
 \abs{\union_{g\in G}gHg\inv} 
 &< (\text{Number of Conjugates of } H) \cdot (\text{Size of each conjugate}) \\ 
 &\qquad \qquad\textit{strictly overcounts since they intersect in at least the identity} \\
 & = [G: N_G(H)] \abs{H} \\
-&= {\abs{G} \over \abs{N_G(H)}} \abs{H} \qtext{since the groups are finite}
+&= {\abs{G} \over \abs{N_G(H)}} \abs{H} \qtext{since $G$ is finite} \\
+&\leq {\abs G \over \abs H} \abs H \\
+&= \abs{G}
 .\end{align*}
-
-Then
-\begin{align*}
-H \leq N_G(H) 
-&\implies [G: N_G(H)] \leq [G: H] = m
-.\end{align*}
-
-and each conjugate contains the identity element, so
-
-\begin{align*}
-\union_{g\in G} gHg\inv &
-\leq 1 + \sum_{H' \in G\cdot H} \left( \abs{H'} - 1 \right) \\
-&= 1 + \sum_{H' \in G\cdot H} n - 1 \\
-&= 1 + (n-1) \abs{G\cdot H} \\
-&= 1 + (n-1) [G: N_G(H)] \\
-&\leq 1 + (n-1) [G: H] \\
-&= 1 + (n-1) m\\
-&= 1 + nm - m \\
-&= 1  + \abs{G} - m \\
-&= \abs{G} - (m-1) \\
-&\leq \abs{G} - 1 \quad \text{since } m \geq 2\\
-&< \abs G
-.\end{align*}
-
-> Todo: not an ideal proof. Doesn't use the first part..?
 
 ### c
 
